k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: assert-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: assert-frontend
  template:
    metadata:
      labels:
        app: assert-frontend
    spec:
      containers:
      - image: ghcr.io/tuuturu/assert-frontend:0.0.1
        name: assert-frontend
