k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: assert-frontend

spec:
  type: ClusterIP
  selector:
    app: assert-frontend
  ports:
  - port: 80
    targetPort: 80
