k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: assert-frontend

spec:
  rules:
  - host: assert.tuuturu.org
    http:
      paths:
      - backend:
          service:
            name: assert-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - assert.tuuturu.org
    secretName: assert-frontend-tls
